[gd_scene load_steps=6 format=3 uid="uid://becwegxidj7lv"]

[ext_resource type="Script" uid="uid://b30xajlcs7s3o" path="res://items/ham/ham.gd" id="1_l2ky2"]
[ext_resource type="Texture2D" uid="uid://cyr4gt8vqk3h4" path="res://items/ham/ham_4.png" id="1_prgo0"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_l2ky2"]
friction = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_l2ky2"]
radius = 24.020824

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_l2ky2"]
radius = 27.0
height = 90.0

[node name="Ham" type="RigidBody2D"]
collision_layer = 32768
collision_mask = 32773
physics_material_override = SubResource("PhysicsMaterial_l2ky2")
gravity_scale = 0.0
lock_rotation = true
linear_damp = 5.0
script = ExtResource("1_l2ky2")

[node name="HamShape" type="CollisionShape2D" parent="."]
position = Vector2(-2, -5)
rotation = -1.5707964
shape = SubResource("CircleShape2D_l2ky2")

[node name="HamSprite" type="Sprite2D" parent="."]
position = Vector2(0, -9)
texture = ExtResource("1_prgo0")

[node name="HamArea" type="Area2D" parent="."]
z_index = -1
collision_layer = 64
collision_mask = 2
monitoring = false
monitorable = false

[node name="AreaShape" type="CollisionShape2D" parent="HamArea"]
position = Vector2(1, -10)
rotation = -1.5707964
shape = SubResource("CapsuleShape2D_l2ky2")
debug_color = Color(1, 0.011462747, 0.054261394, 0.41960785)

[node name="EdibleTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[connection signal="area_entered" from="HamArea" to="." method="_on_ham_eaten"]
[connection signal="timeout" from="EdibleTimer" to="." method="_on_edible_timer_timeout"]
